--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ ul{
 .first-page{
 	background-image:url("../images/bg-header-desktop.png");
 	background-repeat: no-repeat;
+	width:1500px;
 
 }
 
